Refactor Supabase initialization with error handling

--- a/index.html
+++ b/index.html
@@ -111,14 +111,18 @@
     
     // ----------------------------------------
     
-    // Inicializa Supabase
+// Inicializa Supabase
     let supabase = null;
-try {
+    try {
+        // Verifica se as chaves existem antes de tentar conectar
+        if (SB_URL && SB_KEY) {
+            supabase = window.supabase.createClient(SB_URL, SB_KEY);
         } else {
             console.warn("Chaves do Supabase não configuradas.");
         }
     } catch (err) {
         console.error("Erro ao iniciar Supabase:", err);
+    }
     // --- 📚 BIBLIOTECA DE TEXTOS E PERFIS ---
     const bibliotecaPerfis = {
         executor: {
