Modify Supabase URL and key with instructions
Updated Supabase configuration with comments for URL and key.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     // --- ⚙️ ÁREA DE CONFIGURAÇÃO (PREENCHA AQUI) ---
     // Coloque suas chaves do Supabase dentro das aspas abaixo
     
-    const SB_URL = 'https://oabcppkojfmmmqhevjpq.supabase.co';
-    const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9hYmNwcGtvamZtbW1xaGV2anBxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAzMTE2ODEsImV4cCI6MjA4NTg4NzY4MX0.b2OlaVmawuwC34kXhLwbJMm6hnPsO7Hng0r8_AHjwhw';
+    const SB_URL = 'https://oabcppkojfmmmqhevjpq.supabase.co'; // <--- COLE SUA URL AQUI
+    const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9hYmNwcGtvamZtbW1xaGV2anBxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAzMTE2ODEsImV4cCI6MjA4NTg4NzY4MX0.b2OlaVmawuwC34kXhLwbJMm6hnPsO7Hng0r8_AHjwhw'; // <--- COLE SUA CHAVE AQUI
 
     // ---------------------------------------------
 
