--- a/resultado.html
+++ b/resultado.html
@@ -39,7 +39,7 @@
                 <p class="text-xs text-gray-400 uppercase">Intelligence & Growth</p>
             </div>
             <div class="text-right">
-                <p class="text-sm opacity-75">Relatório Confidencial</p>
+                <p class="text-sm opacity-75 mt-4">Relatório Confidencial</p>
                 <p class="text-xs text-gray-500" id="data-hoje"></p>
             </div>
         </div>
@@ -116,7 +116,7 @@
     </div>
 
     <div class="fixed bottom-8 right-8 flex flex-col gap-4 z-50">
-        <a href="https://wa.me/5511999999999?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20o%20meu%20relatório%20NeuroQuiz." target="_blank" class="hidden flex items-center justify-center w-14 h-14 bg-green-500 rounded-full shadow-lg hover:bg-green-600 transition-transform hover:scale-110" id="btn-whatsapp">
+        <a href="https://wa.me/5571999466243?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20o%20meu%20relatório%20NeuroQuiz." target="_blank" class="hidden flex items-center justify-center w-14 h-14 bg-green-500 rounded-full shadow-lg hover:bg-green-600 transition-transform hover:scale-110" id="btn-whatsapp">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="w-8 h-8">
         </a>
         
