--- a/resultado.html
+++ b/resultado.html
@@ -39,7 +39,7 @@
                 <p class="text-xs text-gray-400 uppercase">Intelligence & Growth</p>
             </div>
             <div class="text-right">
-                <p class="text-sm opacity-75 mt-8">Relatório Confidencial</p>
+                <p class="text-sm opacity-75 mt-16 p-2">Relatório Confidencial</p>
                 <p class="text-xs text-gray-500" id="data-hoje"></p>
             </div>
         </div>
