--- a/resultado.html
+++ b/resultado.html
@@ -104,7 +104,7 @@
                     <p class="text-xs text-gray-400 mt-1">Certificado de Autoconhecimento<br>ID: <span id="txid-display"></span></p>
                 </div>
                 <div class="text-right">
-                    <div class="assinatura mb-2">Anderson Dias</div>
+                    <div class="assinatura text-[10px] mb-2">Anderson Dias</div>
                     <div class="h-px w-40 bg-gray-400 ml-auto mb-1"></div>
                     <p class="text-xs text-gray-500 font-bold uppercase">Criado por Anderson Dias</p>
                     <p class="text-[10px] text-gray-400">CEO & Founder SierComp4ny</p>
