--- a/resultado.html
+++ b/resultado.html
@@ -18,7 +18,7 @@
         .serif { font-family: 'Playfair Display', serif; }
         .assinatura {
             font-family: 'Allura', cursive;
-            font-size: 1.5rem;
+            font-size: 1.0rem;
             color: #1e3a8a;
             transform: rotate(-2deg);
             margin-bottom: -10px;
@@ -149,7 +149,7 @@
                 <div class="flex flex-col items-center justify-center mt-4">
                     <div class="assinatura">Anderson Dias</div>
                     <div class="h-px w-32 bg-gray-400 mt-2 mb-1"></div>
-                    <p class="text-[9px] text-gray-400 uppercase mt-0.5">Dias Anderson • Founder & Lead Developer SierComp4ny</p>
+                    <p class="text-[9px] text-gray-400 uppercase mt-0.5">Dias Anderson • Founder & Lead Developer Sier Growth</p>
                 </div>
             </div>
         </div>
