--- a/resultado.html
+++ b/resultado.html
@@ -33,7 +33,7 @@
         @media print {
             .no-print { display: none !important; }
             body { background: white; }
-            #relatorio { box-shadow: none; margin: 100%; width: 100%; }
+            #relatorio { box-shadow: none; margin: 0; width: 150%; }
         }
     </style>
 </head>
