--- a/index-teste.html
+++ b/index-teste.html
@@ -58,8 +58,8 @@
 
     <script>
         // CONFIGURAÇÕES (Preencha em casa no PC)
-        const _supabaseURL = "SUA_URL_AQUI";
-        const _supabaseKey = "SUA_KEY_AQUI";
+        const _supabaseURL = "https://oabcppkojfmmmqhevjpq.supabase.coSUA_URL_AQUI";
+        const _supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9hYmNwcGtvamZtbW1xaGV2anBxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAzMTE2ODEsImV4cCI6MjA4NTg4NzY4MX0.b2OlaVmawuwC34kXhLwbJMm6hnPsO7Hng0r8_AHjwhw";
         const supabase = supabase.createClient(_supabaseURL, _supabaseKey);
 
         const perguntas = [
